--- a/userpage_t.html
+++ b/userpage_t.html
@@ -77,7 +77,7 @@
             <div class="py-4 px-4">
                 <div class="d-flex align-items-center justify-content-between mb-3">
                     <h5 class="mb-0">Average Attention</h5>
-                    <div id="averageField" class="alert alert-success" role="alert">75%</div>
+                    <div id="averageField" class="alert alert-success" role="alert">average</div>
 
                 </div>
             </div>
