--- a/teacherpage_live.html
+++ b/teacherpage_live.html
@@ -1,5 +1,39 @@
 <!DOCTYPE html>
 <link rel="icon" type="image/png" href="images/icons/rec.ico"/>
+<head>
+    <script>const db = require("./connection").db;
+    setInterval(function () {
+        var sessionID = 'SE311';
+        var date = new Date();
+        var m = date.getMonth() + 1;
+        var d = date.getDate();
+        if (m < 10)
+            m = '0' + m;
+        if (d < 10)
+            d = '0' + d;
+        var tStart = date.getFullYear() + '-' + m + '-' + d + ' ' + date.getHours() + ':' + date.getMinutes() + ':00';
+        var tEnd = date.getFullYear() + '-' + m + '-' + d + ' ' + date.getHours() + ':' + date.getMinutes() + ':59';
+        console.log([sessionID, tStart, tEnd]);
+        db.query("SELECT AVG(attentionP) as aver FROM attentionstudent WHERE sessionID=?  AND min>=? AND min<=?", [sessionID, tStart, tEnd], (error, results, fields) => {
+
+            if (results.length > 0) {
+                var average = results[0].aver;
+            }
+            document.getElementById('averageField').innerHTML = '%' + average;
+            if(average>75){
+                document.getElementById("averageField").className = "alert alert-success";
+            }
+            else if (average<50){
+                document.getElementById("averageField").className = "alert alert-danger";
+            }
+            else{
+                document.getElementById("averageField").className = "alert alert-warning";
+            }
+        })
+
+    }, 1000);
+    </script>
+</head>
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,7 +48,7 @@
                     <circle cx="70" cy="70" r="70"></circle>
                 </svg>
                 <div class="number">
-                    <h2>56<span>%</span></h2> 
+                    <h2>average<span>%</span></h2> 
                 </div>
             </div>
             <h2 class="text">Average Attention</h2>
