--- a/userpage_t.html
+++ b/userpage_t.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="huhu.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="vendor/jquery/jquery-3.2.1.min.js">
